# Stepic_2

./: README.md  bool.py  decimal_fraction_complex.py  dictory.py  easy.py  exam_set.py  file.py  functions.py  matrix.py  part_2.py  pyproject.toml  random_string.py  set.py  tuple.py  turtle_leeson.py
files/: random.txt
