[tool.poetry]
name = "stepic-2"
version = "0.1.0"
description = ""
authors = [" GenyaElamkov < GenyaElamkov@gmail.com>"]
readme = "README.md"
packages = [{include = "stepic_2"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
